@@ -1,0 +1,2 @@
+location.enc=ENC(v0z0uGQRucwfBau0e+gB6A\=\=)
+location.plain=Spain
